<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cMobNo"
            android:title="@string/menu_profile"
            android:icon="@drawable/ic_phone"
            />

        <item
            android:id="@+id/nav_cPass"
            android:title="@string/menu_cPass"
            android:icon="@drawable/ic_key" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_logout"
            android:iconTint="@color/White"/>

    </group>
</menu>