<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBG"
    tools:context=".view.activity.AlertListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="end"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backView"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/app_name"
                    android:onClick="onBackPressed"
                    android:paddingStart="0dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    app:srcCompat="@drawable/ic_arrow_back" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_toolbar" />

        <TextView
            android:id="@+id/reportTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/reports"
            android:textColor="#fafafa"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <LinearLayout
            android:id="@+id/startDateLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reportTextView">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/start_date"
                android:src="@drawable/ic_calendar" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppEditEditTextOutlineStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:hint="@string/date"
                app:boxStrokeColor="@color/White">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-7dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/White"
                    android:textSize="14dp"
                    app:backgroundTint="@color/White" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endDateLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDateLayout">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/end_date"
                android:src="@drawable/ic_calendar" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppEditEditTextOutlineStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:hint="@string/end_date"
                app:boxStrokeColor="@color/White">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-7dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/White"
                    android:textSize="14dp"
                    app:backgroundTint="@color/White" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/registration_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDateLayout">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/vehicle_registration_number"
                android:src="@drawable/ic_number_plate" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppEditEditTextOutlineStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:hint="@string/vehicle_registration_number"
                app:boxStrokeColor="@color/White">

                <com.utracx.util.helper.TextInputAutoCompleteTextView
                    android:id="@+id/vehicle_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-7dp"
                    android:drawableEnd="@drawable/ic_search"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:textSize="14dp"
                    app:backgroundTint="@color/White"
                    app:placeholderText="@string/select_vehicle"
                    app:placeholderTextColor="@color/White" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetailedReport"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/dm_sans_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/detailed_report"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_adobe"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="#fff"
            app:layout_constraintBottom_toTopOf="@id/btnConsolidatedReport" />

        <Button
            android:id="@+id/btnConsolidatedReport"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="15dp"
            android:fontFamily="@font/dm_sans_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/consolidated_report"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:visibility="gone"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>