<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitEnd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_splash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_dark_black_top_rounded"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/textEditTextUserName"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/textEditTextPassword"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="11dp"
                android:fontFamily="@font/dm_sans_bold"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center"
                android:onClick="onForgotPasswordClick"
                android:padding="15dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="13dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center"
                android:onClick="onClickOpenWebsite"
                android:padding="15dp"
                android:text="@string/website_address"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />
        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:visibility="gone"
            app:indeterminateAnimationType="contiguous"
            app:indicatorColor="@array/progress_colors"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>